--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,10 @@ dependencies = ["numpy",
                 "beautifulsoup4",
                 "lxml",
                 "s3-streaming",
-                "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.0.0/de_core_news_sm-3.0.0-py3-none-any.whl",
-                "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl",
                 ]
 
 [project.optional-dependencies]
-dev = ["pytest", "pip-tools < 6"]
+dev = ["pytest", "pip-tools"]
 
 [project.urls]
 Homepage = "https://github.com/consileon-ai/cbc-nlp"
